2023-09-09T08:17:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6129843641 # 1193
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-09
* notice: last 14d: unq all: 4 33
* notice: prev accum: outdated-unq outdated-all / unq all: 477 815 / 497 846
* notice: next accum: outdated-unq outdated-all / unq all: 477 815 / 499 848
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-09]

2023-09-08T16:20:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6124066244 # 1191
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-08
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 477 815 / 497 845
* notice: next accum: outdated-unq outdated-all / unq all: 477 815 / 497 846
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-08]

2023-09-08T08:19:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6119402854 # 1190
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-08
* notice: last 14d: unq all: 4 30
* notice: prev accum: outdated-unq outdated-all / unq all: 477 815 / 496 844
* notice: next accum: outdated-unq outdated-all / unq all: 477 815 / 497 845
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-08]

2023-09-07T08:19:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6107222871 # 1187