@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-09T08:17:31Z",
+  "timestamp" : "2023-09-09T16:18:10Z",
   "count_outdated" : 815,
   "uniques_outdated" : 477,
-  "count" : 848,
+  "count" : 849,
   "uniques" : 499,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
