@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 4,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
